<?xml version="1.0" encoding="utf-8"?>
<!--

 Copyright © 2016 Keith Packard <keithp@keithp.com>

 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 2 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 General Public License for more details.

 You should have received a copy of the GNU General Public License along
 with this program; if not, write to the Free Software Foundation, Inc.,
 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
	android:orientation="horizontal"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	>
	<TextView android:id="@+id/set_callsign_label"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:text="@string/set_callsign_label"
		  />
	<EditText android:id="@+id/set_callsign"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_weight="1"
		  android:hint="@string/set_callsign_label"/>
    </LinearLayout>
      <TextView android:id="@+id/frequency"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text=""
		/>
      <Button android:id="@+id/connect_idle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/connect_idle"
	      />
      <Button android:id="@+id/disconnect_idle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/disconnect_idle"
	      />
      <Button android:id="@+id/reboot_idle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/reboot_idle"
	      />
      <Button android:id="@+id/igniters_idle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/igniters_idle"
	      />
</LinearLayout>
