<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright © 2015 Keith Packard <keithp@keithp.com>

  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation; either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  General Public License for more details.

  You should have received a copy of the GNU General Public License along
  with this program; if not, write to the Free Software Foundation, Inc.,
  59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <Button android:id="@+id/map_type_hybrid"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:text="@string/preload_hybrid"
	   android:onClick="selectType"
	   />
  <Button android:id="@+id/map_type_satellite"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:text="@string/preload_satellite"
	   android:onClick="selectType"
	   />
  <Button android:id="@+id/map_type_roadmap"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:text="@string/preload_roadmap"
	   android:onClick="selectType"
	   />
  <Button android:id="@+id/map_type_terrain"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:text="@string/preload_terrain"
	   android:onClick="selectType"
	   />
</LinearLayout>
