<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright © 2015 Keith Packard <keithp@keithp.com>

  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation; either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  General Public License for more details.

  You should have received a copy of the GNU General Public License along
  with this program; if not, write to the Free Software Foundation, Inc.,
  59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <ScrollView android:layout_width="fill_parent"
	      android:layout_height="wrap_content">
    <LinearLayout android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
                  android:orientation="vertical">
      <TextView android:id="@+id/preload_site_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/preload_site_label"
		/>
      <Spinner android:id="@+id/preload_site_list"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:prompt="@string/preload_site_label"
	       android:spinnerMode="dropdown"
	       />
      <TextView android:id="@+id/preload_latitude_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/preload_latitude_label"
		/>
      <EditText android:id="@+id/preload_latitude"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/preload_latitude_label"
		android:inputType="number|numberSigned|numberDecimal"/>
      <TextView android:id="@+id/preload_longitude_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/preload_longitude_label"
		/>
      <EditText android:id="@+id/preload_longitude"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/preload_longitude_label"
		android:inputType="number|numberSigned|numberDecimal"/>
      <TextView android:id="@+id/preload_types"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/preload_types"
		/>
<!--
      <CheckBox android:id="@+id/preload_hybrid"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/preload_hybrid"
		/>
      <CheckBox android:id="@+id/preload_satellite"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/preload_satellite"
		/>
      <CheckBox android:id="@+id/preload_roadmap"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/preload_roadmap"
		/>
      <CheckBox android:id="@+id/preload_terrain"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/preload_terrain"
		/>
-->
      <TextView android:id="@+id/preload_min_zoom_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/preload_min_zoom"
		/>
      <Spinner android:id="@+id/preload_min_zoom"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:prompt="@string/preload_min_zoom"
	       android:spinnerMode="dropdown"
	       />
      <TextView android:id="@+id/preload_max_zoom_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/preload_max_zoom"
		/>
      <Spinner android:id="@+id/preload_max_zoom"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:prompt="@string/preload_max_zoom"
	       android:spinnerMode="dropdown"
	       />
      <TextView android:id="@+id/preload_radius_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/preload_radius"
		/>
      <Spinner android:id="@+id/preload_radius"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:prompt="@string/preload_radius"
	       android:spinnerMode="dropdown"
	       />
      <Button android:id="@+id/preload_load"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/preload_load"
	      />
      <ProgressBar android:id="@+id/preload_progress"
		   android:layout_width="match_parent"
		   android:layout_height="wrap_content"
		   style="@android:style/Widget.ProgressBar.Horizontal"
		   />
    </LinearLayout>
  </ScrollView>
</LinearLayout>
