<?xml version="1.0" encoding="utf-8"?>
<!--

 Copyright © 2020 Keith Packard <keithp@keithp.com>

 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 2 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 General Public License for more details.

 You should have received a copy of the GNU General Public License along
 with this program; if not, write to the Free Software Foundation, Inc.,
 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	<TableLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/tracker_list"
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="1,2,3,4">
	    <TableRow
		android:id="@+id/tracker_row"
		android:layout_gravity="center"
		android:layout_weight="1"
		android:padding="2dip"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<RadioButton
		    android:id="@+id/call_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/callsign_label" />
		<RadioButton
		    android:id="@+id/serial_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/serial_label" />
		<RadioButton
		    android:id="@+id/frequency_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/freq_label" />
		<RadioButton
		    android:id="@+id/age_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/age_label" />
	    </TableRow>
	</TableLayout>
    </ScrollView>
</LinearLayout>
