<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright © 2013 Mike Beattie <mike@ethernal.org>

     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation; either version 2 of the License, or
    (at your option) any later version.

     This program is distributed in the hope that it will be useful, but
     WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
     General Public License for more details.

     You should have received a copy of the GNU General Public License along
     with this program; if not, write to the Free Software Foundation, Inc.,
     59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

  <FrameLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:baselineAligned="true"
      android:orientation="horizontal"
      android:layout_weight="1">

    <LinearLayout
	android:id="@+id/map_online"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_weight="1">
    </LinearLayout>

    <org.altusmetrum.AltosDroid.AltosMapOffline
	android:id="@+id/map_offline"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_weight="1"/>
  </FrameLayout>
  
  <TableLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:stretchColumns="1,3"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:baselineAligned="true"
      android:orientation="horizontal" >

      <TableRow
	  android:layout_gravity="center"
	  android:layout_weight="1"
	  android:padding="2dip"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">
	  <TextView
	      android:id="@+id/distance_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:paddingRight="4dp"
	      android:text="@string/distance_label" />

	  <TextView
	      android:id="@+id/distance_value"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_weight="1"
	      android:text="" />

	  <TextView
	      android:id="@+id/bearing_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:paddingRight="4dp"
	      android:text="@string/bearing_label" />

	  <TextView
	      android:id="@+id/bearing_value"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="" />
      </TableRow>
  </TableLayout>

  <TableLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:stretchColumns="1,2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:baselineAligned="true"
      android:orientation="horizontal" >

      <TableRow
	  android:layout_gravity="center"
	  android:layout_weight="1"
	  android:padding="2dip"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">

	  <TextView
	      android:id="@+id/target_pos_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:paddingRight="4dp"
	      android:text="@string/target_pos_label" />

	  <TextView
	      android:id="@+id/target_lat_value"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="" />

	  <TextView
	      android:id="@+id/target_lon_value"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="" />
      </TableRow>

      <TableRow
	  android:layout_gravity="center"
	  android:layout_weight="1"
	  android:padding="2dip"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">

	  <TextView
	      android:id="@+id/receiver_pos_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:paddingRight="4dp"
	      android:text="@string/receiver_pos_label" />

	  <TextView
	      android:id="@+id/receiver_lat_value"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="" />

	  <TextView
	      android:id="@+id/receiver_lon_value"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="" />
      </TableRow>
  </TableLayout>
</LinearLayout>
